data/derived/sp14/progs/unify/prog3675.ml.out
Characters 57-58:
  if x != [] then x + sumList (t);;
                  ^
Error: This expression has type 'a list
       but an expression was expected of type int
